<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="@dimen/indentBase"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/indentBase"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:src="@drawable/arrowleft"
            android:paddingEnd="@dimen/indentBase"
            tools:ignore="ContentDescription" />
        <TextView style="@style/TextViewHeadStyle"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/settingsLabel" />
    </LinearLayout>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="@dimen/settingsRowSize"
        android:textSize="@dimen/ypRegular16"
        android:text="@string/themeLabel"
        android:layout_marginTop="@dimen/indentBase"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <LinearLayout style="@style/SettingsRowStyle">
        <TextView style="@style/SettingsTextViewStyle"
            android:text="@string/shareLabel" />
        <ImageView style="@style/SettingsImageViewStyle"
            android:src="@drawable/share"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <LinearLayout style="@style/SettingsRowStyle">
        <TextView style="@style/SettingsTextViewStyle"
            android:text="@string/supportLabel" />
        <ImageView style="@style/SettingsImageViewStyle"
            android:src="@drawable/support"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <LinearLayout style="@style/SettingsRowStyle">
        <TextView style="@style/SettingsTextViewStyle"
            android:text="@string/agreementLabel"  />
        <ImageView style="@style/SettingsImageViewStyle"
            android:src="@drawable/agreement"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</LinearLayout>