<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="@dimen/indentBase"
    android:background="@color/ypBlue"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/ypMedium26"
        android:text="@string/appLabel"
        android:textColor="@color/ypWhite"/>
    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/searchLabel"
        android:textSize="@dimen/ypMedium22"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="@dimen/indentBase"
        app:backgroundTint="@color/ypWhite"
        android:textColor="@color/ypBlack"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconTint="@color/ypBlack"
        app:cornerRadius="@dimen/cornerRadius"/>
    <Button
        android:id="@+id/btnMedia"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/mediaLabel"
        android:textSize="@dimen/ypMedium22"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="@dimen/indentBase"
        app:backgroundTint="@color/ypWhite"
        android:textColor="@color/ypBlack"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconTint="@color/ypBlack"
        app:cornerRadius="@dimen/cornerRadius"/>
    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/settingsLabel"
        android:textSize="@dimen/ypMedium22"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="@dimen/indentBase"
        app:backgroundTint="@color/ypWhite"
        android:textColor="@color/ypBlack"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconTint="@color/ypBlack"
        app:cornerRadius="@dimen/cornerRadius"/>
</LinearLayout>