<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/noconnection"
            android:scaleType="center"
            android:layout_gravity="bottom"
            android:contentDescription="@string/SearchNoConnection"/>

        <TextView
            style="@style/SearchPlaceholderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SearchNoConnection" />
        <TextView
            style="@style/SearchPlaceholderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SearchNoConnectionAddition" />

        <com.google.android.material.button.MaterialButton
            style="@style/ButtonOnSearchView"
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="@dimen/cornerRadius"
            android:text="@string/refreshText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>